--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,275 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/** Defaults **/
+h1 {
+    @apply
+    font-black mb-6 text-center text-white text-3xl
+    lg:text-left;
+}
+
+h2 {
+    @apply
+    font-bold mb-4 text-black text-xl;
+}
+
+p {
+    @apply mb-4 text-lg;
+}
+
+.button {
+    @apply inline-block pb-3 px-6 pt-2 rounded-md;
+
+    &.primary {
+        @apply
+        bg-accentprimary/90 text-white
+        hover:bg-accentprimary;
+    }
+}
+
+.list {
+    @apply 
+    max-w-[150px] mx-auto mb-4 text-left w-auto
+    lg:mx-0;
+
+    li {
+        @apply pl-[30px] relative text-neutral-700;
+
+        &::before {
+            content: url(../svg/list-tick.svg);
+            @apply absolute block h-[20px] left-0 top-2/4 w-[20px] -translate-y-2/4;
+        }
+
+        &:not(:last-child) {
+            @apply mb-2
+        }
+    }
+}
+
+#login-wrapper {
+    @apply
+    bg-black bg-cover h-screen relative w-screen;
+
+    #form-wrapper {
+        @apply
+        absolute bg-white left-2/4 max-w-[420px] p-8 rounded-md shadow-sm shadow-gray-300 top-2/4 w-full -translate-x-2/4 -translate-y-2/4
+        dark:bg-darkbgprimary
+        lg:left-[30px] lg:-translate-x-0;
+
+        #logo {
+            @apply mb-6 mx-auto w-1/3
+            dark:fill-darktextsecondary;
+        }
+
+        form {
+            @apply flex flex-col gap-6;
+
+            .input-wrapper {
+                label {
+                    @apply
+                    block mb-2 w-full
+                    dark:text-darktextsecondary;
+                }
+
+                input[type=email],
+                input[type=password],
+                input[type=text] {
+                    @apply
+                    border-gray-300 rounded-md w-full
+                    dark:bg-darkbgsecondary dark:text-darktextsecondary;
+                }
+
+                input[type=checkbox] {
+                    @apply mr-2 rounded-full
+                    dark:bg-darkbgsecondary
+                    dark:focus:ring-darkaccentsecondary dark:focus:ring-offset-darkbgprimary;
+                }
+
+                &.row {
+                    @apply flex flex-row flex-wrap items-center justify-between;
+
+                    label {
+                        @apply mb-0 w-auto;
+                    }
+
+                    #forgot-pw-link {
+                        @apply
+                        dark:text-darktextsecondary
+                        dark:hover:text-darktextprimary;
+                    }
+                }
+            }
+
+            button {
+                @apply 
+                bg-accentsecondary px-4 py-2 rounded-md text-white
+                hover:bg-accentprimary
+                dark:bg-darkaccentsecondary dark:text-darktextsecondary
+                dark:hover:bg-darkaccentprimary dark:hover:text-darktextprimary;
+            }
+        }
+    }
+}
+
+#register-wrapper {
+    @apply
+    bg-black bg-cover h-screen relative w-screen;
+
+    #form-wrapper {
+        @apply
+        absolute bg-white left-2/4 max-w-[420px] p-8 rounded-md shadow-sm shadow-gray-300 top-2/4 w-full -translate-x-2/4 -translate-y-2/4
+        dark:bg-darkbgprimary
+        lg:left-[30px] lg:-translate-x-0;
+
+        #logo {
+            @apply mb-6 mx-auto w-1/3
+            dark:fill-darktextsecondary;
+        }
+
+        form {
+            @apply flex flex-col gap-6;
+
+            .input-wrapper {
+                label {
+                    @apply
+                    block mb-2 w-full
+                    dark:text-darktextsecondary;
+                }
+
+                input[type=email],
+                input[type=password],
+                input[type=text] {
+                    @apply
+                    border-gray-300 rounded-md w-full
+                    dark:bg-darkbgsecondary dark:text-darktextsecondary;
+                }
+
+                input[type=checkbox] {
+                    @apply mr-2 rounded-full
+                    dark:bg-darkbgsecondary
+                    dark:focus:ring-darkaccentsecondary dark:focus:ring-offset-darkbgprimary;
+                }
+
+                &.row {
+                    @apply flex flex-row flex-wrap items-center justify-between;
+
+                    label {
+                        @apply mb-0 w-auto;
+                    }
+
+                    #forgot-pw-link {
+                        @apply
+                        dark:text-darktextsecondary
+                        dark:hover:text-darktextprimary;
+                    }
+                }
+            }
+
+            button {
+                @apply 
+                bg-accentsecondary px-4 py-2 rounded-md text-white
+                hover:bg-accentprimary
+                dark:bg-darkaccentsecondary dark:text-darktextsecondary
+                dark:hover:bg-darkaccentprimary dark:hover:text-darktextprimary;
+            }
+        }
+    }
+}
+
+#hero {
+    @apply 
+    bg-blue-500 pb-14 py-32;
+
+    .container {
+        @apply 
+        max-w-7xl mx-auto px-8
+        lg:flex lg:flex-row lg:flex-wrap lg:gap-8 lg:items-center lg:justify-between;
+
+        .left-content {
+            @apply
+            text-center w-full
+            lg:text-left lg:w-[calc(66.666%-32px)];
+
+            h1 {
+                @apply
+                text-white;
+            }
+
+            p {
+                @apply
+                mb-8 text-white;
+            }
+
+            form {
+                .search-wrapper {
+                    @apply
+                    bg-white flex flex-row flex-wrap items-center justify-between pl-4 pr-2 py-2 rounded-full shadow-sm shadow-transparent
+                    hover:shadow-gray-300;
+
+                    svg {
+                        @apply 
+                        h-[24px] w-[24px]
+                        md:h-[32px] w-[32px];
+                    }
+
+                    #search-input {
+                        @apply 
+                        bg-transparent border-0 w-[180px]
+                        focus:ring-0
+                        sm:w-[400px]
+                        md:w-[500px]
+                        lg:w-[400px];
+                    }
+
+                    button {
+                        @apply
+                        bg-accentprimary font-bold h-full px-3 py-4 rounded-full text-white
+                        md:px-5;
+                    }
+                }
+            }
+        }
+
+        .right-content {
+            @apply
+            hidden
+            lg:block lg:w-1/3;
+        }
+    }
+}
+
+#about {
+    @apply
+    bg-stone-300 pb-10 pt-20;
+
+    .container {
+        @apply 
+        flex flex-row flex-wrap gap-8 items-center justify-between max-w-7xl mx-auto px-8;
+
+        .left-content {
+            @apply w-1/4;
+
+            img {
+                @apply 
+                mx-auto w-2/3
+                lg:w-full;
+            }
+        }
+
+        .right-content {
+            @apply
+            text-center w-[calc(75%-32px)]
+            lg:text-left;
+
+            p {
+                @apply 
+                text-neutral-700;
+            }
+
+            .button {
+                @apply mx-auto;
+            }
+        }
+    }
+}
